// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-details-last-comment Renders \`extra-details-last-comment\` with date in previous month 1`] = `
<div
  class="c-clickable-tooltip c-extra-details"
>
  <div>
    <span
      class="c-extra-details__badge purple lighten-2"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light white--text"
        style="font-size: 16px;"
      >
        comment
      </i>
    </span>
  </div>
  <span
    class="v-tooltip v-tooltip--top"
  >
    <transition-stub
      name="slide-y-reverse-transition"
    />
    <span />
  </span>
</div>
`;

exports[`extra-details-last-comment Renders \`extra-details-last-comment\` with date in previous month 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    <div
      class="text-md-center"
    >
      <strong>
        Comment
      </strong>
      <div>
        By: lastComment-author
      </div>
      <div>
        Date: 07/08/2013 19:00:00
      </div>
      <div
        class="c-extra-details__message"
      >
        Comment: 
        <span>
          lastComment-message
        </span>
      </div>
    </div>
  </span>
</div>
`;

exports[`extra-details-last-comment Renders \`extra-details-last-comment\` with full last comment 1`] = `
<div
  class="c-clickable-tooltip c-extra-details"
>
  <div>
    <span
      class="c-extra-details__badge purple lighten-2"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light white--text"
        style="font-size: 16px;"
      >
        comment
      </i>
    </span>
  </div>
  <span
    class="v-tooltip v-tooltip--top"
  >
    <transition-stub
      name="slide-y-reverse-transition"
    />
    <span />
  </span>
</div>
`;

exports[`extra-details-last-comment Renders \`extra-details-last-comment\` with full last comment 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    <div
      class="text-md-center"
    >
      <strong>
        Comment
      </strong>
      <div>
        By: lastComment-author
      </div>
      <div>
        Date: 6:00:00
      </div>
      <div
        class="c-extra-details__message"
      >
        Comment: 
        <span>
          lastComment-message
        </span>
      </div>
    </div>
  </span>
</div>
`;
